--- a/gallery/css/styles.css
+++ b/gallery/css/styles.css
@@ -56,6 +56,13 @@ img {
   width: 100vw;
 }
 
+.gallery__grid{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
 /*==================== Gallery ====================*/
 
 .gallery {
