--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -82,7 +82,7 @@
 /*========== Variables Dark theme ==========*/
 body.dark-theme {
   /* HSL color mode */
-  --first-color-second: hsl(var(--hue-color), 30%, 8%);
+  --first-color-second: var(--input-color);
   --title-color: hsl(var(--hue-color), 8%, 95%);
   --text-color: hsl(var(--hue-color), 8%, 75%);
   --input-color: hsl(var(--hue-color), 29%, 16%);
@@ -198,7 +198,8 @@ img {
   left: 0;
   z-index: var(--z-fixed);
   /* background-color: var(--body-color); */
-  background-color: hsl(30, 41, 91);
+  /* background-color: hsl(30, 41, 91); */
+  background-color: #fff;
 }
 
 /*==================== NAV ====================*/
@@ -730,10 +731,12 @@ img {
 }
 
 .portfolio__img {
-  width: 265px;
+  /* width: 265px; */
   /* width: 300px; perfect  */
   border-radius: 0.5rem;
   justify-self: center;
+  width: 380px;
+  height: 300px;
   
 }
 
@@ -1225,7 +1228,7 @@ img {
   .services__content {
     padding: 6rem 0 2rem 2.5rem;
   }
-
+ 
   .services__modal-content {
     width: 450px;
   }
