--- a/gallery/css/styles.css
+++ b/gallery/css/styles.css
@@ -102,11 +102,11 @@ img {
   content: '';
   width: 100%;
   height: 100%;
-  background: linear-gradient(
+  /* background: linear-gradient(
     180deg,
     hsla(0, 0%, 100%, 0) 32%,
     hsla(0, 0%, 0%, 0.3) 100%
-  );
+  ); */
   top: 0;
   z-index: 1;
 }
